--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+/
+├── index.html
+├── style.css (optional, if external styles are used)
+├── script.js (optional, if external scripts are used)
+
 import matplotlib.pyplot as plt
 import matplotlib.patches as patches
 import numpy as np
